@@ -1192,7 +1192,7 @@ class convert_tree(visitor):
                               wikiutil.url_unquote(title),
                               self.white_space])
         # Smiley
-        elif src and (self.request.cfg.url_prefix in src or '../' in src) and "img/" in src: # XXX this is dirty!
+        elif src and (self.request.cfg.url_prefix_static in src or '../' in src) and "img/" in src: # XXX this is dirty!
             filename = src.split("/")[-1]
             for markup, data in self.request.theme.icons.iteritems():
                 if data[1] == filename:
